// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PermissionStorage should add a list of permissions 1`] = `
PermissionStorage {
  "permissionMap": Map {
    "user" => Array [
      "test1",
      "test2",
    ],
  },
  "roles": Array [],
}
`;

exports[`PermissionStorage should add a role with fallbackRole 1`] = `
PermissionStorage {
  "permissionMap": Map {},
  "roles": Array [
    Object {
      "fallbackRoles": Array [],
      "name": "Moderator",
      "permissions": Array [],
      "type": "user",
    },
    Object {
      "fallbackRoles": Array [
        Object {
          "fallbackRoles": Array [],
          "name": "Moderator",
          "permissions": Array [],
          "type": "user",
        },
      ],
      "name": "Admin",
      "permissions": Array [],
      "type": "user",
    },
  ],
}
`;

exports[`PermissionStorage should add a role with permissions 1`] = `
PermissionStorage {
  "permissionMap": Map {},
  "roles": Array [
    Object {
      "fallbackRoles": Array [],
      "name": "Admin",
      "permissions": Array [
        "test1",
        "test2",
      ],
      "type": "user",
    },
  ],
}
`;

exports[`PermissionStorage should update the existing role 1`] = `
PermissionStorage {
  "permissionMap": Map {},
  "roles": Array [
    Object {
      "fallbackRoles": Array [],
      "name": "Moderator",
      "permissions": Array [],
      "type": "user",
    },
    Object {
      "fallbackRoles": Array [
        Object {
          "fallbackRoles": Array [],
          "name": "Moderator",
          "permissions": Array [],
          "type": "user",
        },
      ],
      "name": "Admin",
      "permissions": Array [
        "test1",
        "test2",
        "test3",
      ],
      "type": "user",
    },
  ],
}
`;
